# fantasy-scheduler

./: Cargo.toml  README.md
src/: generate_schedule.rs  main.rs
